--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="./images/pc.jpg" alt="pc" width="264">
+                    <img src="./images/pc.jpg" alt="pc" width="360">
                 </li>
                 <li>
-                    <img src="./images/phonelayers.jpg" alt="phone with layers" width="264">
+                    <img src="./images/phonelayers.jpg" alt="phone with layers" width="360">
                 </li>
                 <li>
-                    <img src="./images/holding.jpg" alt="hand holds phone" width="264">
+                    <img src="./images/holding.jpg" alt="hand holds phone" width="360">
                 </li>
             </ul>
         </section>
@@ -89,22 +89,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/mark.jpg" alt="Mark Guerrero">
+                    <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/tom.jpg" alt="Tom Ford">
+                    <img src="./images/tom.jpg" alt="Tom Ford" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/camila.jpg" alt="Camila Garcia">
+                    <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/daniel.jpg" alt="Daniel Wilson">
+                    <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
