--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
     </main>
 
     <footer>
-        <a href="/">
-            <img src="./images/logo.svg" alt="logo">
-        </a>
+        <a href="./index.html">WebStudio</a>
         <p>
             Increase the flow of customers and 
             sales for your business with digital 
